tests/instantiating/invalid/masters_property_invalid_type/bus.fbd
main bus
	masters = true
	foo status
